feat: improve search functionality - make search text to be lowercase and query also lowercase to make search case insentitive - add pagination support - improve searched results by showing 2 lines containing the search keyword - highlight searched keyword in search results

--- a/static/style.css
+++ b/static/style.css
@@ -260,3 +260,36 @@ textarea {
     page-break-after: avoid;
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+table {
+  margin-top: 20px;
+  border-spacing: 10px;
+}
+
+td {
+  border: 1px solid;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.next, .prev {
+  display: none;
+  border: 1px solid;
+  border-radius: 8px;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin: 0 5px;
+}
